[gd_scene load_steps=17 format=3 uid="uid://d6s5lddw7wv7"]

[ext_resource type="Script" uid="uid://blkhpr5gcc0sh" path="res://scripts/player.gd" id="1_iwpo4"]
[ext_resource type="FontFile" uid="uid://duujpyh00pie6" path="res://fonts/JetBrainsMono-Regular.ttf" id="2_onrkg"]
[ext_resource type="Script" uid="uid://blhvx4b8ecxwo" path="res://scripts/inventory.gd" id="3_dqkch"]
[ext_resource type="PackedScene" uid="uid://biq8k4lj4jr4a" path="res://scenes/inventory_hotbar.tscn" id="3_qhqgy"]
[ext_resource type="Script" uid="uid://dnmn5ppf7cgcm" path="res://scripts/hud.gd" id="3_qlg0r"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qlg0r"]
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vd578"]
material = SubResource("StandardMaterial3D_qlg0r")
radius = 0.33
height = 3.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fb3t6"]
radius = 0.33
height = 3.0

[sub_resource type="Theme" id="Theme_i3pqv"]
default_font = ExtResource("2_onrkg")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qhqgy"]
bg_color = Color(0.588235, 0, 0, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2els"]
bg_color = Color(0, 0.582465, 5.77569e-07, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qlg0r"]
bg_color = Color(0, 0, 0.584314, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="Gradient" id="Gradient_qlg0r"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 0.784314)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fb3t6"]
gradient = SubResource("Gradient_qlg0r")
width = 2
height = 15

[sub_resource type="Gradient" id="Gradient_tuyoq"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.392157)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_i3pqv"]
gradient = SubResource("Gradient_tuyoq")

[node name="Player" type="CharacterBody3D" groups=["Player"]]
process_mode = 3
script = ExtResource("1_iwpo4")

[node name="Skeleton" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
visible = false
mesh = SubResource("CapsuleMesh_vd578")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CapsuleShape3D_fb3t6")

[node name="CameraPivot1P" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.2, 0)

[node name="Camera" type="Camera3D" parent="CameraPivot1P"]

[node name="RayCast3D" type="RayCast3D" parent="CameraPivot1P/Camera"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.8)
target_position = Vector3(0, -3.5, 0)

[node name="CameraPivot3P" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[node name="Camera" type="Camera3D" parent="CameraPivot3P"]
transform = Transform3D(1, 0, 0, 0, 0.996195, 0.0871558, 0, -0.0871558, 0.996195, 0, 0.5, 2.8)

[node name="RayCast3D" type="RayCast3D" parent="CameraPivot3P/Camera"]
transform = Transform3D(1, 0, 0, 0, -3.72529e-08, -1, 0, 1, -3.72529e-08, 0, 0.0149026, -3.61245)
enabled = false
target_position = Vector3(0, -3.5, 0)

[node name="HUD" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_i3pqv")
script = ExtResource("3_qlg0r")

[node name="FPSLabel" type="Label" parent="HUD"]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 63.0
offset_bottom = 27.0
text = "FPS: 00"

[node name="ObjectLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_top = 5.0
offset_right = 29.0
offset_bottom = 27.0
grow_horizontal = 2
text = "Object"

[node name="TestLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 27.0
grow_horizontal = 0

[node name="HealthBar" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -91.0
offset_right = 261.0
offset_bottom = -65.0
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_qhqgy")
value = 50.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HUD/HealthBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -11.0
offset_right = 111.0
offset_bottom = 11.0
grow_vertical = 2
theme_override_constants/outline_size = 3
text = "Health:   100"

[node name="StaminaBar" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -61.0
offset_right = 261.0
offset_bottom = -35.0
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_g2els")
value = 50.0
show_percentage = false

[node name="StaminaLabel" type="Label" parent="HUD/StaminaBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -11.0
offset_right = 121.0
offset_bottom = 11.0
grow_vertical = 2
theme_override_constants/outline_size = 3
text = "Stamina:  100"

[node name="MagicBar" type="ProgressBar" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -31.0
offset_right = 261.0
offset_bottom = -5.0
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_qlg0r")
value = 50.0
show_percentage = false

[node name="MagicLabel" type="Label" parent="HUD/MagicBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -11.0
offset_right = 121.0
offset_bottom = 11.0
grow_vertical = 2
theme_override_constants/outline_size = 3
text = "Magic:    100"

[node name="Crosshair" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="TextureRect1" type="TextureRect" parent="HUD/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -27.0
offset_right = 1.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_fb3t6")

[node name="TextureRect2" type="TextureRect" parent="HUD/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = 4.0
offset_right = 1.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_fb3t6")

[node name="TextureRect3" type="TextureRect" parent="HUD/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -5.0
offset_right = -6.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.57079
texture = SubResource("GradientTexture2D_fb3t6")

[node name="TextureRect4" type="TextureRect" parent="HUD/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 23.0
offset_top = -5.0
offset_right = 25.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.57079
texture = SubResource("GradientTexture2D_fb3t6")

[node name="Inventory" type="Control" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("3_dqkch")

[node name="TextureRect" type="TextureRect" parent="HUD/Inventory"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -320.0
offset_right = 324.0
offset_bottom = 320.0
grow_vertical = 2
texture = SubResource("GradientTexture2D_i3pqv")

[node name="Label" type="Label" parent="HUD/Inventory/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.5
offset_top = 8.0
offset_right = 43.5
offset_bottom = 30.0
grow_horizontal = 2
text = "INVENTORY"

[node name="GridContainer" type="GridContainer" parent="HUD/Inventory/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -284.0
offset_right = 140.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 4

[node name="InventoryHotbar" parent="HUD" instance=ExtResource("3_qhqgy")]
layout_mode = 1
